finished all sections

--- a/work-details.html
+++ b/work-details.html
@@ -33,13 +33,13 @@
 	<nav>
 		<ul class="navigation-list">
 			<li>
-				<a href="index.html">Home</a>
-			</li>
-			<li class="active">
 				<a href="about.html">About.</a>
 			</li>
 			<li>
 				<a href="works.html">Works.</a>
+			</li>
+			<li class="active">
+				<a href="work-details.html">Details.</a>
 			</li>
 			<li>
 				<a href="contact.html">Contact.</a>
@@ -50,30 +50,14 @@
 		</ul>
 	</nav>
 	<h2 class="title title-center">
-		About<br>
-		<span class="small">— See some info about me —</span>
+		Soundpro<br>
+		<span class="small">— Web page for <span class="accent">soundpro</span> team —</span>
 	</h2>
-	<div class="author author-info">
-		<h2>Dmytro L.</h2>
-		<h3>UCU Student,<br>Software Engineer</h3>
+	<div class="work-image author-image">
+		<img src="img/guitar2.jpg" alt="work">
 	</div>
-	<div class="author author-more scroll-down">
-		<button>
-			<p>more</p>
-			<i class="fa fa-arrow-down" aria-hidden="true"></i>
-		</button>
-	</div>
-	<div class="author-image">
-		<img src="img/man.jpg" alt="author">
-	</div>
-	<div class="about-text">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	</div>
+	<a href="works.html" class="left-text">Left text</a>
+	<a href="works.html" class="right-text">Right text</a>
 	<div class="scroll-down more">
 		<button>
 			<p>load more</p>
